# celsius

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  audit.toml  deny.toml  justfile  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
benches/: render.rs
demos/: demo.tape
examples/: analytic_demo.rs
scenes/: cloudy_day.toml  golden_hour_cumulus.toml  moonless_darksky.toml  overcast_night.toml
scripts/: diff_raw_vs_png.py  dump_lab_pixels.py  write_manifest.py
src/: analytic_sky.rs  astro.rs  colorspace.rs  config.rs  gradient.rs  haze.rs  lib.rs  lightning.rs  main.rs  moon.rs  noise.rs  pigs.rs  precipitation.rs  render.rs  scene.rs  stars.rs  terminal.rs
src/tui/: app.rs  mod.rs  widget.rs
src/weather/: bortle.rs  forecast.rs  gradients.rs  location.rs  mod.rs  state.rs
tests/: launch.rs  lightning.rs  open-meteo-forecast-hamburg.json  open-meteo-forecast-with-nulls.json  open-meteo-geocoding-hamburg.json  oracle.rs  weather.rs
tests/fixtures/: open-meteo-forecast-hamburg.json
tests/fixtures/scenes/: blue_hour_calm.toml  dawn.toml  high_noon_clear.toml  moonlit_clear_winter.toml  stormy_afternoon_advancing.toml
tests/goldens/: manifest.toml
tools/: diff_raw_vs_png.py  dump_lab_pixels.py  verification-scenes.md  write_manifest.py
